src/app/components/chat-thread/chat-thread.component.css
.root {
    display: table;
    margin: 0 auto;
    height: 100vh;
    border-radius: 10px;
    overflow: hidden;
}

.media {
    overflow: visible;
}

.content {
    margin: 0 auto;
    display: inline-block;
    display: flex;
    flex-direction: column;
    height: inherit;
}

.ana-min.root {
    height: 57px !important;
}

.ana-min .chat-thread,
.ana-min .chat-input-container {
    height: 0 !important;
    display: none;
}

.ana-min .root {
    height: 57px !important;
}

.chat-thread {
    padding: 20px;
    height: 100%;
    flex-grow: 1;
    overflow-y: scroll;
    background-color: #F5F5F5;
}

.chat-message-group {
    margin: 10px 0;
}

.chat-message-item {
    max-width: 80%;
    position: relative;
    min-width: 40%;
    box-shadow: 0px 2px 3px -1px rgba(110, 110, 110, 0.15);
}

    .chat-message-item.media * .chat-media {
        width: 100%;
        height: 100%;
        background-color: white;
    }

    .chat-message-item.media.incoming * .chat-media {
        border-radius: 0 10px 10px 0;
    }

        .chat-message-item.media.incoming * video.chat-media,
        .chat-message-item.media.incoming * .chat-media > audio {
            border-radius: 0 10px 0 0 !important;
        }

    .chat-message-item.media.outgoing * .chat-media {
        border-radius: 10px 0 0 10px;
    }

        .chat-message-item.media.outgoing * video.chat-media,
        .chat-message-item.media.outgoing * .chat-media > audio {
            border-radius: 10px 0 0 0 !important;
        }

    .chat-message-item.text {
        background-color: white;
        padding: 15px;
    }

    .chat-message-item.typing {
        background-color: white;
        padding: 10px 15px;
        min-width: auto;
    }

    .chat-message-item.incoming {
        float: left;
        border-radius: 0 10px 10px 0;
        border-left-width: 3px;
        border-left-style: solid;
    }

    .chat-message-item.outgoing {
        float: right;
        border-radius: 10px 0 0 10px;
        border-right-width: 3px;
        border-right-style: solid;
    }

.chat-message-item-container {
    width: 100%;
    display: inline-block;
}

app-chat-thread {
    max-width: 500px;
}

.dots {
    width: 100%;
    height: 100%;
    background-image: linear-gradient(transparent 0px, transparent 2px, rgb(255, 255, 255) 2px, rgb(255, 255, 255) 20px), linear-gradient(to right, rgb(200, 195, 199) 0px, rgb(200, 195, 199) 2px, rgb(255, 255, 255) 2px, rgb(255, 255, 255) 20px);
    background-position: 437px -2px;
    background-size: 20px 20px;
}

.chat-text {
}

.chat-time {
    font-size: 8px;
    opacity: 0.4;
    position: absolute;
    bottom: 2px;
    right: 8px;
}

.chat-stub {
    width: 0;
    height: 0;
    bottom: -13px;
    display: none;
}

.incoming > .chat-stub {
    border-top-width: 13px;
    border-top-style: solid;
    border-left: 15px solid transparent;
    position: absolute;
    left: -3px;
}

.outgoing > .chat-stub {
    border-top-width: 13px;
    border-top-style: solid;
    border-right: 15px solid transparent;
    position: absolute;
    right: -3px;
}

.chat-message-last {
    margin-bottom: 15px;
}

    .chat-message-last > .chat-stub {
        display: block;
    }

.chat-bottom-overlay {
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    position: absolute;
    bottom: 0;
    right: 0;
    color: white;
    font-size: 9.6px;
    font-style: italic;
    padding: 5px 10px;
}

.outgoing * .chat-bottom-overlay {
    border-radius: 0 0 0 10px;
}

.incoming * .chat-bottom-overlay {
    border-radius: 0 0 10px 0;
}

.media > .chat-time {
    color: white;
    opacity: 1;
    bottom: 5px;
}

.chat-media > audio {
    width: 230px;
    margin-bottom: 19px;
}

video.chat-media {
    margin-bottom: 19px;
}

.chat-input-container {
    background-color: #F5F5F5;
    border-radius: 0 0 10px 10px;
    padding-top: 5px;
}

.chat-input {
    display: flex;
    align-items: center;
    width: 100%;
}

    .chat-input.click {
        display: inline;
        float: left;
        width: auto;
    }

    .chat-input.text {
        background-color: white;
        -moz-border-radius: 0 0 10px 10px;
        -webkit-border-radius: 0 0 10px 10px;
        border-radius: 0 0 10px 10px;
    }

    .chat-input button.btn-click {
        border-radius: 4px;
        padding: 11px 23px;
        border: transparent;
        margin: 0 10px 10px 10px;
        white-space: nowrap;
    }

    .chat-input button.btn-icon {
        font-size: 20px;
        border: none;
        background: none;
        padding: 0 14px;
        opacity: 0.8;
    }

        .chat-input button.btn-icon:disabled {
            opacity: 0.10;
        }

    .chat-input i {
        font-size: 20px;
    }

.chat-text-input {
    border: none;
    vertical-align: middle;
    padding: 12px 16px;
    width: 100%;
    outline: none;
}

.chat-input-click-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    overflow-x: auto;
    background-color: transparent;
    /*Remove below for click buttons to scroll horizontally*/
    justify-content: center;
    flex-wrap: wrap;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

.chat-file-attachment {
    height: 60px !important;
    background-color: white !important;
}

.carousel-wrapper {
    position: relative;
    margin: 0 -20px;
}

    .carousel-wrapper > .carousel-arrow {
        position: absolute;
        top: 50%;
        padding: 5px;
        opacity: 0.7;
        cursor: pointer;
    }

        .carousel-wrapper > .carousel-arrow.right {
            right: 0;
        }

        .carousel-wrapper > .carousel-arrow.left {
            left: 0;
        }

.carousel-container {
    width: 100%;
    overflow-x: auto;
    white-space: nowrap;
    margin-bottom: 5px;
    margin-top: 5px;
    display: flex;
    -ms-flex-direction: row;
    -webkit-flex-direction: row;
    flex-direction: row;
}

.carousel-item-media > img,
.carousel-item-media > video,
.carousel-item-media > audio {
    width: 100%;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

.carousel-item-media {
    padding: 20px 0;
    overflow: hidden;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 180px;
}

.carousel-item {
    width: 240px;
    margin: 0 10px;
    border-radius: 10px;
    background-color: white;
    height: 100%;
    display: flex;
    flex-direction: column;
    box-shadow: 0px 1px 6px 1px rgba(110, 110, 110, 0.15);
}

.carousel-item-content {
    padding: 0 20px;
    flex-grow: 1;
}

.carousel-item-container {
    margin-bottom: 5px;
    padding: 3px; /*For carousel item shadow to be visible*/
}

.carousel-item-title {
    font-weight: bold;
    margin: 10px 0;
    overflow: hidden;
}

.carousel-item-desc {
    color: gray;
    font-size: small;
    margin: 10px 0;
}

.carousel-item-button > button {
    width: 100%;
    border-top: 1px solid #ccc;
    border-radius: 0;
    text-align: left;
    font-weight: bold;
    text-transform: uppercase;
    font-size: x-small;
    text-align: center;
}

.text-wrap {
    white-space: normal;
}

.carousel-container > table {
    margin-bottom: 10px;
}

.ana-title {
    padding: 10px 15px;
    z-index: 100;
    position: relative;
    -moz-border-radius: 10px 10px 0 0;
    -webkit-border-radius: 10px 10px 0 0;
    border-radius: 10px 10px 0 0;
}

.ana-min .ana-title {
    margin-top: 20px;
    box-shadow: 0px 1px 6px 1px rgba(0,0,0,0.36);
    margin-left: 6px;
    margin-right: 6px;
}

.ana-logo {
    display: inline;
    float: left;
    margin: 0 15px -4px 0;
}

    .ana-logo > img {
        width: 35px;
        height: 35px;
        border-radius: 0 7px 7px 7px;
        box-shadow: 0px 0px 25px 3px rgba(0,0,0,0.19);
        margin-top: 4px;
    }

.ana-content {
    display: inline;
}

    .ana-content > .title {
        font-weight: bold;
        font-size: 18px;
        position: relative;
    }

    .ana-content > .subtitle {
        font-size: 11px;
    }

.ana-actions > img {
    width: 50px;
}

.ana-minmax-btn {
    border-radius: 3px;
    height: 3px;
    width: 15px;
    opacity: 0.6;
    position: absolute;
    top: 10px;
    right: 10px;
}

.ana-min .ana-minmax-btn {
    border-radius: 2px;
    height: 11px;
    background-color: transparent;
    width: 11px;
}

.ana-min .ana-logo {
    transform: translateY(-22px);
}

    .ana-min .ana-logo > img {
        box-shadow: 0px 1px 6px 1px rgba(0,0,0,0.36);
    }

.input-msg {
    background-color: white;
    padding: 5px 16px;
    font-size: 10px;
    color: crimson;
}

.typing-indicator-container {
    display: table-cell;
}

.typing-indicator {
    width: auto;
    display: table;
    position: relative;
}

    .typing-indicator span {
        height: 6px;
        width: 6px;
        float: left;
        margin: 0 1px;
        display: block;
        border-radius: 50%;
        opacity: 0.4;
    }

        .typing-indicator span:nth-of-type(1) {
            -moz-animation: 1s blink infinite 0.3333s;
            -o-animation: 1s blink infinite 0.3333s;
            -webkit-animation: 1s blink infinite 0.3333s;
            animation: 1s blink infinite 0.3333s;
        }

        .typing-indicator span:nth-of-type(2) {
            -moz-animation: 1s blink infinite 0.6666s;
            -o-animation: 1s blink infinite 0.6666s;
            -webkit-animation: 1s blink infinite 0.6666s;
            animation: 1s blink infinite 0.6666s;
        }

        .typing-indicator span:nth-of-type(3) {
            -moz-animation: 1s blink infinite 0.9999s;
            -o-animation: 1s blink infinite 0.9999s;
            -webkit-animation: 1s blink infinite 0.9999s;
            animation: 1s blink infinite 0.9999s;
        }

@-moz-keyframes blink {
    50% {
        opacity: 1;
    }
}

@-webkit-keyframes blink {
    50% {
        opacity: 1;
    }
}

@keyframes blink {
    50% {
        opacity: 1;
    }
}

@-webkit-keyframes bulge {
    50% {
        -moz-transform: scale(1.05);
        -ms-transform: scale(1.05);
        -o-transform: scale(1.05);
        -webkit-transform: scale(1.05);
        transform: scale(1.05);
    }
}

@-moz-keyframes bulge {
    50% {
        -moz-transform: scale(1.05);
        -ms-transform: scale(1.05);
        -o-transform: scale(1.05);
        -webkit-transform: scale(1.05);
        transform: scale(1.05);
    }
}

@keyframes bulge {
    50% {
        -moz-transform: scale(1.05);
        -ms-transform: scale(1.05);
        -o-transform: scale(1.05);
        -webkit-transform: scale(1.05);
        transform: scale(1.05);
    }
}

.scrollbar::-webkit-scrollbar-track {
    background-color: transparent;
}

.scrollbar::-webkit-scrollbar {
    width: 5px;
    height: 5px;
    background-color: transparent;
}

.scrollable::-webkit-scrollbar * {
    background: transparent;
}

.scrollbar::-webkit-scrollbar-thumb {
    border-radius: 10px !important;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3) !important;
    background-color: rgba(0,0,0,.3) !important;
}

.carousel-item-container:first-child > .carousel-item {
    margin-left: 16px;
}

.carousel-item-container:last-child > .carousel-item {
    margin-right: 16px;
}

.carousel-arrow > i {
    color: rgba(0,0,0,.6);
}

.ana-link {
    color: inherit;
    text-decoration: underline;
}

.chat-bottom-overlay > img {
    height: 12px;
    width: 12px;
}

.chat-history-loading {
    position: absolute;
    bottom: -2px;
    z-index: 100;
    text-align: center;
    width: 100%;
    margin: 0 -20px 0 -15px;
}

    .chat-history-loading > mat-progress-spinner {
        display: inline-block;
        height: 50px;
        width: 50px;
    }

